Fix cloud element overflow

--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
     --page-bg-1: #6BCBFF;
     --page-bg-2: #9EF0FF;
     --light-text: white;
-    --dark-text: black;
+    --dark-text: #222;
     --side-margin: 5%;
     --border-radius: 1rem;
     --nav-height: 100px;
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-color: var(--page-bg-2);
+    background-color: var(--page-bg-1);
     min-height: 200vh;
     display: flex;
     flex-direction: column;
@@ -74,11 +74,6 @@ main {
     transition: all 250ms;
 }
 
-.game > #game-logo:hover > img {
-    height: 125%;
-    transition: all 250ms;
-}
-
 .game > .wrapper {
     position: relative;
     width: 30rem;
@@ -104,11 +99,11 @@ main {
     text-wrap: nowrap;
     color: var(--light-text);
 
-    padding: 0.4rem 0.8rem;
+    padding: 0.2rem 0.6rem;
     border: var(--logo-yellow) solid 0.2rem;
-    border-radius: 0.4rem;
+    outline: black solid 0.2rem;
     background: linear-gradient(var(--logo-orange), var(--logo-yellow));
-    outline: var(--dark-text) solid 0.2rem;
+    border-radius: 0.4rem;
     z-index: 2;
 }
 
@@ -131,22 +126,27 @@ main {
 }
 
 .game > .wrapper > #itch > img {
-    height: 20rem;
-    top: 2.5rem;
+    height: 15rem;
+    top: 2rem;
     right: 3rem;
     rotate: -15deg;
 }
 
 .game > .clouds {
+    overflow: hidden;
     position: absolute;
-    width: 300%;
+    width: 100%;
     height: 100%;
-    background: url("images/background_trees.png");
-    background-repeat: repeat-x;
-    background-size: 40rem;
-    background-position-y: 10rem;
+}
+
+.game > .clouds > div {
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    background: url("images/background_trees.png") repeat-x;
+    background-size: 50rem;
     background-position: right;
-    animation: slide 60s linear infinite;
+    animation: slide 45s linear infinite;
 }
 
 .game > .gradient {
@@ -159,13 +159,25 @@ main {
 
 
 @keyframes slide {
-    0% {
-      right: 0;
+0% { right: 0; }
+100% { right: -100%; }
+}
+
+@media (pointer:none), (pointer:coarse) {
+    .game > .wrapper > #playstore > a {
+        font-size: 3em;
+        padding: 0.6rem 1.6rem;
+        width: 100%;
     }
-    100% {
-        right: -100%;
+
+    .game > .wrapper > #itch > a {
+        color: var(--dark-text);
+        font-size: 2em;
+        border: var(--page-bg-2) solid 0.2rem;
+        outline: black solid 0.2rem;
+        background: linear-gradient(var(--page-bg-1), var(--page-bg-2));
     }
-  }
+}
 
 /* :root {
     --page-background: #e9e9e9;
